Fix Overlapping Expansion Panel Abstände

--- a/src/WebUI/ClientApp/src/app/modules/member-management/member-details/history-panels/history-panels.component.scss
+++ b/src/WebUI/ClientApp/src/app/modules/member-management/member-details/history-panels/history-panels.component.scss
@@ -7,10 +7,11 @@
     width: 100%;
 }
 
-.cell-paragraph {
-    margin: 0px;
-}
 
 td.mat-column-time-span {
     min-width: 140px;
+}
+
+.expansion-panel {
+    margin-bottom: 2px;
 }
